Change from sanitize HTML to escape HTML and fix broken layout (float)

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,15 +1,3 @@
-/*
-
-$font-stack: Helvetica,
-sans-serif;
-$primary-color: #333;
-
-body {
-  font: 100% $font-stack;
-  color: $primary-color;
-}
-*/
-
 body {
   display: block;
   margin: 0px;
@@ -105,7 +93,7 @@ div.row {
   width: 100%;
   margin: 20px 10px 5px 10px;
 
-  display: inline-table;
+  display: inline-block;
 }
 
 div.row:after {
@@ -222,10 +210,11 @@ table {
       }
 
       td.log-value {
+        text-align: left;
         width: 100%;
       }
 
-      pre.log-value {
+      div.log-value {
         font-family: 'Tahoma';
         white-space: pre-wrap;
         word-break: break-all;
